# taxlite

./: .gitignore  INSTRUCTIONS.txt  TaxLite.bat  TaxLite.cmd  TaxLite.sh  app.py  pyproject.toml  requirements.txt  vendors.json
.streamlit/: config.toml
src/taxlite/: __init__.py  cli.py  excel.py  scanner.py  vendors.py
